Fix nav spacing and add notifications checks for logout

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -205,7 +205,7 @@
   display: flex;
   margin-right: spacing();
 
-  &.is-electron {
+  &.is-web {
     margin-right: 0;
   }
 }
